# api.certy.com.br

./: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml
migrations/: 0001_create_certificate_sessions.sql  0002_session_id_to_text.sql  0003_harden_session_storage.sql  0004_add_email_verification_fields.sql  0005_add_email_resend_controls.sql  0006_create_acme_accounts.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  session_id.rs  state.rs  validation.rs
src/repositories/: session_repository.rs
src/routes/: certificates.rs  health.rs  mod.rs
src/services/: acme.rs  dns_precheck.rs  email_sender.rs  email_validation.rs  email_verification.rs  mod.rs
tests/: validation_domain_tests.rs  validation_email_tests.rs
