[package]
name = "certy-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
instant-acme = { version = "0.8.5", features = ["rcgen"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
