[package]
name = "certy-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
instant-acme = { version = "0.8.5", features = ["rcgen"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
rustls = { version = "0.23.37", features = ["aws_lc_rs"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
